--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+
 :root {
   --violet:#6c5ce7;
   --red: #F90716;
@@ -9,44 +10,51 @@
   --navy: #2E4C6D;
   --pink: #FC427B;
   --gradient:linear-gradient(90deg, var(--violet), var(--pink));
-  --animation: linear-gradient(90deg, var(--red), var(--yellow)); }
+  --animation: linear-gradient(90deg, var(--red), var(--yellow));
+}
 
 * {
   font-family: 'Nunito', sans-serif;
-  margin: 0;
-  padding: 0;
+  margin:0; padding:0;
   box-sizing: border-box;
-  outline: none;
-  border: none;
+  outline: none; border:none;
   text-decoration: none;
   text-transform: capitalize;
-  transition: all .2s ease-out; }
+  transition: all .2s ease-out;
+}
 
 html {
   font-size: 62.5%;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 html::-webkit-scrollbar {
-  width: 1rem; }
+  width: 1rem;
+}
 
 html::-webkit-scrollbar-track {
-  background: #333; }
+  background:#333;
+}
 
 html::-webkit-scrollbar-thumb {
-  background: #fff;
-  border-radius: 5rem; }
+  background:#fff;
+  border-radius: 5rem;
+}
 
 body {
   background: var(--gradient);
-  padding: 3rem 7%; }
+  padding: 3rem 7%;
+}
 
 section {
-  padding: 2rem 7%; }
+  padding: 2rem 7%;
+}
 
 .container {
-  background: #fff;
+  background:#fff;
   border-radius: .5rem;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+}
 
 .btn {
   display: inline-block;
@@ -56,67 +64,78 @@ section {
   background: #333;
   color: #fff;
   cursor: pointer;
-  font-size: 1.7rem; }
+  font-size: 1.7rem;
+}
 
 .btn:hover {
-  background: var(--gradient); }
+  background: var(--gradient);
+}
 
 .heading {
   color: transparent;
   background: var(--gradient);
   -webkit-background-clip: text;
   background-clip: text;
-  padding: 0 1rem;
+  padding:0 1rem;
   padding-top: 2.5rem;
   text-align: center;
   font-size: 4rem;
   text-transform: uppercase;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .btn {
   display: inline-block;
   margin-top: 1rem;
-  padding: .8rem 3rem;
+  padding:.8rem 3rem;
   border-radius: .5rem;
-  background: #333;
-  color: #fff;
+  background:#333;
+  color:#fff;
   cursor: pointer;
-  font-size: 1.7rem; }
+  font-size: 1.7rem;
+}
 
 .btn:hover {
-  background: var(--gradient); }
+  background:var(--gradient);
+}
 
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 2rem 7%;
-  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1);
+  padding:2rem 7%;
+  border-bottom: .1rem solid rgba(0,0,0,.1);
   position: relative;
-  z-index: 1000; }
+  z-index: 1000;
+}
 
-header .logo {
+header .logo{
   font-size: 3rem;
   color: var(--violet);
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 header .logo span {
-  color: var(--pink); }
+  color: var(--pink);
+}
 
-header .navbar a {
+header .navbar a{
   margin-left: 2rem;
   font-size: 2rem;
   font-weight: bold;
-  color: #333; }
+  color:#333;
+}
 
 header .navbar a:hover {
-  color: var(--pink); }
+  color: var(--pink);
+}
 
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   padding: 2rem;
@@ -127,10 +146,12 @@ body {
   align-items: center;
   --color-dark: #252841;
   min-height: 100vh;
-  justify-content: center; }
+  justify-content: center;
+}
 
 h1 {
-  color: var(--color-dark); }
+  color: var(--color-dark);
+}
 
 .page-container {
   display: flex;
@@ -141,41 +162,42 @@ h1 {
   background-color: #fff;
   box-shadow: 0 0 10px #d3d3d3;
   border-radius: 5px;
-  padding: 10px 15px; }
-
+  padding: 10px 15px;
+}
 .page-container i {
   padding: 6px 12px;
   cursor: pointer;
   font-size: 18px;
   color: var(--color-dark);
-  pointer-events: none; }
-
+  pointer-events: none;
+}
 .page-container button {
   cursor: pointer;
   background-color: transparent;
-  border: none; }
-
+  border: none;
+}
 .page-container button:disabled i {
-  color: #aaadc7; }
+  color: #aaadc7;
+}
 
 #pagination {
   display: flex;
   align-items: center;
-  flex-wrap: wrap; }
-
+  flex-wrap: wrap;
+}
 #pagination li {
   list-style: none;
   cursor: pointer;
   border-radius: 5px;
   overflow: hidden;
-  margin: 0 3px; }
-
+  margin: 0 3px;
+}
 #pagination li.active {
-  background-color: #39f; }
-
+  background-color: #39f;
+}
 #pagination li.active a {
-  color: #fff; }
-
+  color: #fff;
+}
 #pagination li a {
   text-decoration: none;
   font-weight: 600;
@@ -184,79 +206,86 @@ h1 {
   line-height: 1;
   color: #a9a9a9;
   font-size: 20px;
-  pointer-events: none; }
-
+  pointer-events: none;
+}
 #pagination li:hover {
-  background-color: #39f; }
-
+  background-color: #39f;
+}
 #pagination li:hover a {
-  color: #fff; }
+  color: #fff;
+}
 
 .settings {
   padding-top: 3rem;
   display: flex;
-  align-items: flex-start; }
-
+  align-items: flex-start;
+}
 .settings .form-input {
-  margin-bottom: 1rem; }
-
+  margin-bottom: 1rem;
+}
 .settings .form-input:not(:last-child) {
-  margin-right: 3rem; }
-
+  margin-right: 3rem;
+}
 .settings .form-input > label {
-  margin-bottom: 10px; }
-
+  margin-bottom: 10px;
+}
 .settings .form-input label {
   font-size: 18px;
   font-weight: 600;
-  display: block; }
-
+  display: block;
+}
 .settings .form-input > input {
-  width: 100%; }
-
+  width: 100%;
+}
 .settings .form-input input {
   font-size: 18px;
   outline: none;
   padding: 10px 17px;
   border-radius: 5px;
-  border: 1px solid #b6b6b6; }
-
+  border: 1px solid #b6b6b6;
+}
 .settings .wrapper-form-check {
-  display: flex; }
-
+  display: flex;
+}
 .settings .wrapper-form-check .form-check {
   display: flex;
   line-height: 1;
-  align-items: center; }
-
+  align-items: center;
+}
 .settings .wrapper-form-check .form-check:not(:last-child) {
-  margin-right: 10px; }
-
+  margin-right: 10px;
+}
 .settings .wrapper-form-check label {
-  margin-left: 10px; }
+  margin-left: 10px;
+}
 
 #menu {
   font-size: 2.5rem;
-  padding: .5rem 1rem;
+  padding:.5rem 1rem;
   border-radius: .3rem;
-  border: 0.1rem solid rgba(0, 0, 0, 0.2);
+  border:.1rem solid rgba(0,0,0,.2);
   cursor: pointer;
-  display: none; }
+  display: none;
+}
 
 .home {
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
-  align-items: center; }
+  align-items: center;
+}
 
 .home .content {
-  flex: 1 1 40rem; }
+  flex: 1 1 40rem;  
+}
 
 .home .image {
-  flex: 1 1 40rem; }
+  flex: 1 1 40rem;
+}
 
 .home .image img {
-  width: 100%; }
+  width: 100%;
+}
 
 .home .content h3 {
   color: transparent;
@@ -264,28 +293,34 @@ h1 {
   -webkit-background-clip: text;
   background-clip: text;
   font-size: 4rem;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .home .content p {
   padding: .5rem 0;
   font-size: 1.7rem;
-  color: #666; }
+  color: #666;
+}
 
 .course {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem; }
+  gap: 1.5rem;
+
+}
 
 .course .box {
   flex: 1 1 30rem;
   border-radius: .5rem;
-  border: 1rem solid rgba(0, 0, 0, 0.1);
+  border: 1rem solid rgba(0,0,0,.1);
   padding: 1rem;
-  position: relative; }
+  position: relative;
+}
 
 .course .box img {
-  height: 20rem;
-  width: 100%; }
+    height: 20rem;
+    width: 100%;
+}
 
 .course .box .amount {
   position: absolute;
@@ -295,74 +330,87 @@ h1 {
   padding: .5rem 1rem;
   background: var(--animation);
   color: #fff;
-  border-radius: .5rem; }
+  border-radius: .5rem;
+}
 
 .course .box .stars i {
   color: var(--violet);
   font-size: 1.5rem;
-  padding: 1rem 0; }
+  padding: 1rem 0;
+}
 
 .course .box h3 {
   color: var(--pink);
   font-size: 2.3rem;
   font-weight: bold;
   font-style: initial;
-  font-family: 'Nunito' sans-serif; }
+  font-family: 'Nunito' sans-serif;
+}
 
 .course .box p {
   color: #666;
   font-size: 1.5rem;
-  padding: .5rem 0; }
+  padding: .5rem 0;
+}
 
 .course .icons {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
+  border-top: .1rem solid rgba(0,0,0,.1);
   margin-top: 1rem;
   padding: .5rem;
-  padding-top: 1rem; }
+  padding-top: 1rem;
+}
 
 .course .icons p {
   color: #666;
-  font-size: 1.3rem; }
+  font-size: 1.3rem;
+}
 
 .course .icons p i {
   padding-right: .4rem;
-  color: var(--red); }
+  color: var(--red);
+}
 
 .teacher {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem; }
+  gap: 1rem;
+}
 
 .teacher .box {
   flex: 1 1 20rem;
-  border: 1rem solid rgba(0, 0, 0, 0.1);
+  border: 1rem solid rgba(0,0,0,.1);
   border-radius: .3rem;
   padding: 1rem;
-  text-align: center; }
+  text-align: center;
+}
 
 .teacher .box img {
   height: 10rem;
   width: 10rem;
   margin: .5rem 0;
   border-radius: 50%;
-  object-fit: cover; }
+  object-fit: cover;
+}
 
 .teacher .box h3 {
   color: var(--violet);
   font-size: 2.5rem;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .teacher .box span {
   color: var(--pink);
-  font-size: 2rem; }
+  font-size: 2rem;
+}
 
 .teacher .box p {
   color: #666;
   font-size: 1.5rem;
-  padding: 1rem 0; }
+  padding: 1rem 0;
+}
 
 .teacher .box .share a {
   height: 4rem;
@@ -372,116 +420,140 @@ h1 {
   background: var(--green);
   border-radius: .5rem;
   margin: .3rem;
-  color: #fff; }
+  color: #fff;
+}
 
 .teacher .box .share a:hover {
-  background: var(--violet); }
+  background: var(--violet);
+}
 
 .price {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem; }
+  gap: 1.5rem;
+}
 
 .price .box {
   flex: 1 1 30rem;
   text-align: center;
-  border: 1rem solid rgba(0, 0, 0, 0.1);
-  border-radius: .5rem; }
+  border: 1rem solid rgba(0,0,0,.1);
+  border-radius: .5rem;
+}
 
 .price .box h3 {
   font-size: 2.5rem;
   color: #333;
-  padding: 1.5rem 0; }
+  padding: 1.5rem 0;
+}
 
 .price .box .amount {
   font-size: 4.5rem;
   color: #fff;
   padding: 1rem 0;
   background: var(--animation);
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .price .box .amount span {
-  font-size: 2rem; }
+  font-size: 2rem;
+}
 
 .price .box ul {
-  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1);
+  border-bottom: .1rem solid rgba(0,0,0,.1); 
   padding: 1rem 0;
-  list-style: none; }
+  list-style: none; 
+}
 
 .price .box ul li {
   padding: .7rem 0;
   font-size: 1.7rem;
-  color: #666; }
+  color: #666;
+}
 
 .price .box .btn {
-  margin: 2rem 0; }
+  margin: 2rem 0;
+}
 
 .review {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem; }
+  gap: 1.5rem;
+}
 
 .review .box {
   border-radius: .5rem;
-  border: 1rem solid rgba(0, 0, 0, 0.1);
+  border: 1rem solid rgba(0,0,0,.1);
   padding: 1rem;
-  flex: 1 1 30rem; }
+  flex: 1 1 30rem;
+}
 
 .review .box .student {
   display: flex;
   align-items: center;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .review .box .student .student-info {
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
 .review .box .student i {
   font-size: 6rem;
   color: var(--red);
-  opacity: 0.5; }
+  opacity: 0.5;
+}
 
 .review .box .student .student-info img {
   border-radius: 50%;
   object-fit: cover;
   height: 7rem;
   width: 7rem;
-  margin-left: 1.5rem; }
+  margin-left: 1.5rem;
+}
 
 .review .box .student .student-info h3 {
   font-size: 2rem;
-  color: #333; }
+  color: #333;
+}
 
 .review .box .student .student-info span {
   font-size: 1.5rem;
-  color: var(--pink); }
+  color: var(--pink);
+}
 
 .review .box .text {
   padding: 1rem 0;
   font-size: 1.6rem;
-  color: #666; }
+  color: #666;
+}
 
 .contact {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem; }
+  gap: 1.5rem;
+}
 
 .contact .image {
-  flex: 1 1 35rem; }
+  flex: 1 1 35rem;
+}
 
 .contact .image img {
-  width: 100%; }
+  width: 100%;
+}
 
 .contact form {
   flex: 1 1 50rem;
-  border: 0.1rem solid rgba(0, 0, 0, 0.1);
+  border: .1rem solid rgba(0,0,0,.1);
   border-radius: .5rem;
-  padding: 2rem; }
+  padding: 2rem;
+}
 
 .contact form .inputBox {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 .contact form .inputBox input,
 .contact form .box,
@@ -490,55 +562,66 @@ h1 {
   padding: 1rem;
   margin: .7rem 0;
   font-size: 1.7rem;
-  border: 0.1rem solid rgba(0, 0, 0, 0.1);
+  border: .1rem solid rgba(0,0,0,.1);
   border-radius: .5rem;
   text-transform: none;
-  color: #333; }
+  color: #333;
+}
 
 .contact form .inputBox input:focus,
 .contact form .box:focus,
 .contact form textarea:focus {
-  border-color: var(--pink); }
+  border-color: var(--pink);
+}
 
 .contact form .inputBox input {
-  width: 49%; }
+  width: 49%;
+}
 
 .contact form textarea {
   height: 20rem;
-  resize: none; }
+  resize: none;
+}
 
 .footer .box-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem; }
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
 
 .footer .box-container .box {
-  flex: 1 1 20rem; }
+    flex: 1 1 20rem;
+}
 
 .footer .box-container .box h3 {
-  font-size: 2.5rem;
-  color: var(--blue);
-  font-family: "Nunito" sans-serif;
-  font-weight: bold;
-  padding: .7rem 0; }
+    font-size: 2.5rem; 
+    color: var(--blue);
+    font-family: "Nunito" sans-serif;
+    font-weight: bold;
+    padding: .7rem 0;
+}
 
 .footer .box-container .box p {
-  font-size: 1.5rem;
-  color: #666;
-  padding: .7rem 0; }
+    font-size: 1.5rem;
+    color: #666;
+    padding: .7rem 0;
+}
 
 .footer .box-container .box a {
-  display: block;
-  font-size: 1.5rem;
-  color: #666;
-  padding: .7rem 0; }
+    display: block;
+    font-size: 1.5rem;
+    color: #666;
+    padding: .7rem 0;
+}
 
 .footer .box-container .box a:hover {
-  color: var(--pink); }
+    color: var(--pink);
+}
 
 .footer .box-container .box p i {
   padding-right: .5rem;
-  color: var(--red); }
+  color: var(--red);
+}
 
 .footer .credit {
   font-size: 2rem;
@@ -546,50 +629,78 @@ h1 {
   padding: 1rem;
   padding-top: 2rem;
   text-align: center;
-  border-top: 1rem solid rgba(0, 0, 0, 0.1);
-  color: #666; }
+  border-top: 1rem solid rgba(0,0,0,.1);
+  color: #666;
+}
 
 .footer .credit span {
   color: var(--green);
-  font-weight: bold; }
+  font-weight: bold;
+}
+
 
 /* media queries */
+
 @media (max-width: 991px) {
-  html {
-    font-size: 55%; }
-  body {
-    padding: 1.5rem; }
-  header {
-    padding: 2rem; }
-  section {
-    padding: 2rem; } }
+    
+    html {
+        font-size: 55%;
+    }
+
+    body {
+        padding: 1.5rem;
+    }
+
+    header {
+        padding: 2rem;
+    }
+
+    section {
+        padding: 2rem;
+    }
+}
 
 @media (max-width: 768px) {
-  #menu {
-    display: initial; }
-  header .navbar {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    background: #fff;
-    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
-    border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
-    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); }
-  header .navbar.active {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); }
-  header .navbar a {
-    font-size: 2.5rem;
-    display: block;
-    margin: 2rem 0;
-    text-align: center; }
-  .contact form .inputBox input {
-    width: 100%; } }
+    
+    #menu {
+        display: initial;
+    }
+    
+    header .navbar {
+        position: absolute;
+        top:100%; left:0; right:0;
+        background:#fff;
+        border-top: .1rem solid rgba(0,0,0,.2);
+        border-bottom: .1rem solid rgba(0,0,0,.2);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+    
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+    
+    header .navbar a {
+        font-size: 2.5rem;
+        display: block;
+        margin:2rem 0;
+        text-align:center;
+    }
+
+    .contact form .inputBox input {
+      width: 100%;
+    }
+}
 
 @media (max-width: 400px) {
+    
   html {
-    font-size: 50%; } }
+      font-size: 50%;
+  }
+}
 
 @media (max-width: 992px) {
   .settings {
-    flex-direction: column; } }
+    flex-direction: column;
+  }
+}
+
